--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
       margin-bottom: 1rem;
       color: #00eaff;
     }
-    .c-video {
-      position: relative;
-      top:140px;
-      left:400px;
-      width:250px;
-      height: auto;
+    .h-video {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-item: center;
+      max-width:100%;
       border-radius: 15px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.5);
       z-index: 800;
@@ -152,8 +152,8 @@
       <p>Revolutionizing emergency response in India with autonomous drones and robots.</p>
       <button class="btn">Learn More</button>
       <div class="h-video“>
-        <video class="c-video” autoplay="” loop="” muted="" playsinlinr="">
-        <source src= "video.mp4" type="video/mp4">
+        <video class="h-video” autoplay="” loop="” muted="" playsinlinr="">
+        <source src= "Video.mp4" type="video/mp4">
     </div>
   </section>  <section id="about">
     <h2>About the Project</h2>
